[gepardec/mega#727-zep-rest] Added Cache and fixed some Json Parsing bugs

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -115,6 +115,8 @@ mega:
         - "robin.fischer@gepardec.com"
         - "alexandra.stummer@gepardec.com"
         - "simon.bauer@gepardec.com"
+        - "simon.gartner@gepardec.com"
+        - "tobias.meindl@gepardec.com"
         - "paul.waldecker@gepardec.com"
         - "paul.proemer@gepardec.com"
 
