[Gepardec/mega#735] implement WatchResource to receive notifications to Pub/Sub

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -176,6 +176,17 @@ mega:
     token:
       expires-in-minutes: 1200 # 20h - real token expires in 24h
 
+  google:
+    service-account-key: "${GOOGLE_CLOUD_SERVICE_ACCOUNT_GEPARDEC_MAIL:default}"
+    gmail:
+      api:
+        application-name: "MEGA"
+        workspace-user: "service@gepardec.com"
+        label-filter:
+          - "Label_5632925620975792127" # ID of name "ZEP_TEST" of workspace-user
+    pubsub:
+      topic: "projects/mega-260510/topics/MegaWebhookEmail"
+
 ## DEV Properties
 "%dev":
   quarkus:
