--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build and test project with Maven
+      - name: Build (and test) project with Maven
         run: mvn -B package -D skipTests --file pom.xml
 
       - uses: nelonoel/branch-name@v1.0.1
@@ -41,18 +41,6 @@ jobs:
           dockerfile: Containerfile
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-#      - uses: mr-smithers-excellent/docker-build-push@v5
-#        name: push-container-image
-#        with:
-#          image: mega-backend
-#          registry: ghcr.io
-#          username: ${{ github.repository }}
-#          password: ${{ secrets.GHCR_TOKEN }}
-#          dockerfile: Containerfile
-#          addLatest: true
-#          tags: ${{ steps.vars.outputs.sha_short }},test
-#          buildArgs: BRANCH=${BRANCH_NAME},COMMIT=${{ steps.vars.outputs.sha_short }},VERSION=${{ steps.vars.outputs.sha_short }}
 
 #  notify:
 #    name: Slack Notifications
