--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,11 +10,11 @@ jobs:
       - uses: actions/checkout@v3
         name: checkout
 
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 #          cache: maven
 
 #      - name: Cache the Maven packages to speed up build
