--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-#          cache: maven
+          cache: maven
 
 #      - name: Cache the Maven packages to speed up build
 #        uses: actions/cache@v1
