--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,6 +28,8 @@ jobs:
       - name: Set env
         run: export BRANCH=${BRANCH_NAME}
       - run: echo "BRANCH=$BRANCH_NAME" >> $GITHUB_ENV
+      - run: echo "COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - run: echo "VERSION=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - run: echo ${BRANCH}
 
       - uses: mr-smithers-excellent/docker-build-push@v6
@@ -36,5 +38,9 @@ jobs:
           image: mega-backend
           registry: ghcr.io
           dockerfile: Containerfile
+          buildArgs: |
+            COMMIT=${{ env.COMMIT}}
+            BRANCH=${{ env.BRANCH}}
+            VERSION=${{ env.VERSION}}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
