--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <sonar.language>java</sonar.language>
         <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-        <revision>4.6.1-SNAPSHOT</revision>
+        <revision>4.7.0</revision>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss</maven.build.timestamp.format>
     </properties>
