--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,4 +43,5 @@ jobs:
           buildArgs: COMMIT=${{ env.COMMIT}}, BRANCH=${{ env.BRANCH_NAME}}, VERSION=${{ env.COMMIT}}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          # if the branch is main, add the latest tag
           addLatest: ${{ github.ref == 'refs/heads/main' }}
