--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,8 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "postUpgradeTasks": {
+    "commands": ["ls -l"],
+    "fileFilters": ["**/*"],
+    "executionMode": "update"
+  }
 }
