--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "postUpgradeTasks": {
-    "commands": ["ls -l"],
+    "commands": ["touch blubb.txt"],
     "fileFilters": ["**/*"],
     "executionMode": "update"
   }
