--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "postUpgradeTasks": {
-    "commands": ["touch blubb.txt"],
-    "fileFilters": ["**/*"],
-    "executionMode": "update"
-  }
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
