add sbom pipeline

--- a/pom.xml
+++ b/pom.xml
@@ -431,6 +431,19 @@
                     <quarkus.smallrye-metrics.path>/metrics</quarkus.smallrye-metrics.path>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.cyclonedx</groupId>
+                <artifactId>cyclonedx-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-bom</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>makeAggregateBom</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
