--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,10 +15,10 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'rootfs'
+          scan-type: 'fs'
           scan-ref: '.'
           scanners: 'vuln,secret,config'
-          ignore-unfixed: false
+          ignore-unfixed: true
           format: 'sarif'
           exit-code: '1'
           output: 'trivy-results.sarif'
@@ -103,7 +103,7 @@ jobs:
         with:
           input: 'mega-backend-oci'
           format: 'sarif'
-          ignore-unfixed: false
+          ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
           output: 'trivy-results.sarif'
